header fix align

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
 
 header{
     margin: 100px 0 100px 0;
+    text-align: center;
 }
 
 main{
